--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,6 +1,92 @@
-.loginBox{
-    background-color:pink;
+.loginBox {
+  padding: 5%;
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  color: green;
 }
-body{
-    background-color: aqua;
+
+.header {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
+.adminLogo {
+  border-radius: 40%;
+}
+
+.adminP {
+  width: 100%;
+}
+
+.loginForm {
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  border-radius: 15px;
+}
+.label {
+  width: 100%;
+  margin: 0.5%;
+  border-radius: 15px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+  height: 30%;
+  display: flex;
+  flex-direction: row;
+}
+.submitLabel {
+  margin: auto;
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.labelP {
+  width: 40%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.inputLogin {
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
+  border: none;
+  background-color: rgba(0, 0, 0, 0.08);
+}
+.inputLogin:focus {
+  outline-width: 0;
+  border: 1px solid rgba(0, 199, 10, 0.3);
+}
+
+.buttonLogin {
+  height: fit-content;
+  border: 2px solid green;
+}
+
+.buttonLogin,
+.inputLogin {
+  margin: 2%;
+  padding: 2%;
+  text-align: center;
+  font-size: large;
+  transition-duration: 0.3s;
+  border-radius: 10px;
+  font-weight: bold;
+}
+.buttonLogin:hover {
+  background-color: rgb(80, 160, 0);
+  box-shadow: 0 0 4px 4px rgba(255, 255, 255, 0.3);
+  color: white;
+  transform: scale(1.05);
+}
+.errorMessage {
+  color: red;
 }
