--- a/src/components/dashboard/User/userStyle.scss
+++ b/src/components/dashboard/User/userStyle.scss
@@ -24,3 +24,21 @@
 	background-color: rgba(255, 255, 255, 0.1);
 	color: white !important;
 }
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 40%;
+	text-align: left;
+  }
+  
+  .card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+
+p { 
+	/*  That create a ne line, when he word is to long*/
+	word-break: break-all ;
+  }
+
+  
