--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
 
 .btn {
     display: inline-block;
-    background: #000;
+    background: rgb(105, 67, 67);
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -38,6 +38,7 @@ body {
     text-decoration: none;
     font-size: 15px;
     font-family: inherit;
+    max-width: 25%;
 }
 
 .btn:focus {
@@ -48,29 +49,13 @@ body {
     transform: scale(0.98);
 }
 
-.btn-block {
+#btn-block {
     display: block;
     width: 100%;
+    text-align: center;
 }
 
-.task {
-    background: #f4f4f4;
-    margin: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-}
-
-.task.reminder {
-    border-left: 5px solid green;
-}
-
-.task h3 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.add-form {
+#add-form {
     margin-bottom: 40px;
 }
 
@@ -83,17 +68,19 @@ body {
 }
 
 .form-control input {
-    width: 100%;
+    width: 50%;
+    align-self: left;
     height: 40px;
     margin: 5px;
     padding: 3px 7px;
     font-size: 17px;
 }
 
-.form-control-check {
+#form-control-check {
     display: flex;
-    align-items: center;
+    text-align: center;
     justify-content: space-between;
+    max-width: 25%;
 }
 
 .form-control-check label {
@@ -102,7 +89,7 @@ body {
 
 .form-control-check input {
     flex: 2;
-    height: 20px;
+    height: 30px;
 }
 
 footer {
