--- a/src/components/dashboard/User/userStyle.scss
+++ b/src/components/dashboard/User/userStyle.scss
@@ -1,5 +1,5 @@
 #main-container {
-	display: table;
+	display: table-cell;
 	width: 100%;
 	height: 100%;
 }
@@ -13,6 +13,8 @@
 }
 
 #content {
+	margin-left:15%;
+	margin-right:15%;
 	display: table-cell;
 	width: 85%;
 	vertical-align: top;
@@ -20,15 +22,27 @@
 	padding: 10px 0 0 10px;
 	
 }
+
 #sidebar a:hover {
 	background-color: rgba(255, 255, 255, 0.1);
 	color: white !important;
 }
+
+.item-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 2em;
+  }
+
 .card {
+	margin-left:15%;
+	margin-right:15%;
+	display: table-cell;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
 	width: 40%;
-	text-align: left;
+	text-align:left;
   }
   
   .card:hover {
@@ -41,6 +55,3 @@ p {
 	word-break: break-all ;
   }
 
-  .user.reminder {
-    border-left: 5px solid green;
-}
