Landing page and show the admin status
landing page and its css.
Admin status can be showed in card.

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -60,3 +60,15 @@ h1 {
     }
   }
   
+.table-intro {
+  border-width: 50%;
+  text-align: center;
+  padding: 125px;
+}
+.table-text{
+  padding-left: 30px;
+  padding-right: 40px;
+}
+.adminNavBar{
+  width: 50%;
+}
