--- a/src/components/dashboard/Product/productStyle.scss
+++ b/src/components/dashboard/Product/productStyle.scss
@@ -40,3 +40,13 @@
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
   
+.header-title{
+	margin: 1em 0 0.5em 0;
+	color: #343434;
+	font-weight: normal;
+	font-family: 'Ultra', sans-serif;   
+	font-size: 36px;
+	line-height: 42px;
+	text-transform: uppercase;
+	text-shadow: 0 2px white, 0 3px #777;
+}
